<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#6688A7D0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetialsActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/contact_img"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_190sdp"

        android:layout_marginTop="44dp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/contact_avater"

                    />


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintTop_toBottomOf="@id/contact_img"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/phoneLayout"
        app:layout_constraintStart_toStartOf="parent">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:text="@string/name"
    android:textSize="@dimen/_20sdp"
    android:padding="@dimen/_2sdp"
    android:gravity="center"



    />
        <TextView
            android:id="@+id/nameView"
    android:layout_width="match_parent"
            android:textColor="@color/black"
     android:layout_height="match_parent"
     android:textSize="@dimen/_20sdp"
    android:padding="@dimen/_3sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:gravity="center"




            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/phoneLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintTop_toBottomOf="@id/nameLayout"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/descriptionLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:text="@string/phone"
    android:textSize="@dimen/_20sdp"
    android:padding="@dimen/_2sdp"
    android:gravity="center"



    />
        <TextView
            android:id="@+id/phoneView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:textSize="@dimen/_20sdp"
    android:padding="@dimen/_3sdp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_3sdp"
            android:gravity="center"




            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/descriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:text="@string/descriptionDetials"
            android:textSize="@dimen/_20sdp"


            />

        <TextView
            android:id="@+id/descriptionView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_3sdp"
            android:gravity="center"
            android:padding="@dimen/_3sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"


            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>